--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -27,13 +27,13 @@
     </div>
     <div class="col-md-4" id="sidebar">
       <search-facet results="results" facet="source"
-        type="sources" title="Data sources">
+        type="sources" title="Filter by source">
       </search-facet>
       <search-facet results="results" facet="schema"
-        type="schemas" title="Entity types">
+        type="schemas" title="Filter by types">
       </search-facet>
       <search-facet results="results" facet="entity.jurisdiction_code"
-        type="countries" title="Jurisdictions">
+        type="countries" title="Filter by jurisdiction">
       </search-facet>
     </div>
   </div>
