--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -3,8 +3,8 @@
     <div class="col-md-8">
       <p class="help-block hit-count">
         <span ng-show="results.total">
-          Showing {{results.offset+1}} to {{results.offset + results.limit}}
-          of {{results.total}} matches.
+          Showing {{ results.offset+1  | number }} to {{ results.offset + results.limit  | number }}
+          of {{ results.total | number }} matches.
         </span>
         <span ng-hide="results.total">
           No results match your search terms. Please try a wider query.
