--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -5,7 +5,7 @@
   <title>{{config.APP_NAME}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google" content="notranslate" />
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800&subset=latin,greek,vietnamese,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
 
   {% assets filters="scss,cssmin", output="build/style.css",
