--- a/schwifty/templates/angular/home.html
+++ b/schwifty/templates/angular/home.html
@@ -16,12 +16,12 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <search-facet results="summary" facet="source"
+      <search-facet results="summary" facet="$sources"
         type="sources" title="Browse by source">
       </search-facet>
     </div>
     <div class="col-md-6">
-      <search-facet results="summary" facet="schema"
+      <search-facet results="summary" facet="$schema"
         type="schemas" title="Browse by entity">
       </search-facet>
     </div>
