--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -14,25 +14,25 @@
         <li ng-repeat="result in results.results"
           class="result">
 
-          <a class="title" ng-click="showEntity(result)">
-            <entity-icon schema="result.schema"></entity-icon> {{result.entity.name}}
+          <a class="title" href="#/entity/{{result.id}}">
+            <entity-icon schema="result.$schema"></entity-icon> {{result.name}}
           </a>
           <div class="summary">
-            {{metadata.schemas[result.schema].title}}
+            {{metadata.schemas[result.$schema].title}}
             &middot;
-            {{metadata.sources[result.source].title}}
+            {{result.$sources.join(', ')}}
           </div>
         </li>
       </ol>
     </div>
     <div class="col-md-4" id="sidebar">
-      <search-facet results="results" facet="source"
+      <search-facet results="results" facet="$sources"
         type="sources" title="Filter by source">
       </search-facet>
-      <search-facet results="results" facet="schema"
+      <search-facet results="results" facet="$schema"
         type="schemas" title="Filter by types">
       </search-facet>
-      <search-facet results="results" facet="entity.jurisdiction_code"
+      <search-facet results="results" facet="jurisdiction_code"
         type="countries" title="Filter by jurisdiction">
       </search-facet>
     </div>
