Get sources from the SQL database.

--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -20,7 +20,12 @@
           <div class="summary">
             {{metadata.schemas[result.$schema].title}}
             &middot;
-            {{result.$sources.join(', ')}}
+            <span ng-repeat="source in result.$sources">
+              {{metadata.sources[source].title}}
+              <span ng-if="!$last">
+                &middot;
+              </span>
+            </span>
           </div>
         </li>
       </ol>
