Show $linkcount and allow to sort by that.

--- a/schwifty/static/style.scss
+++ b/schwifty/static/style.scss
@@ -72,6 +72,19 @@ body, html {
 .hit-count {
     color: $text-muted;
     margin-bottom: $spacing * 4;
+
+    .sorting a {
+        //color: $text-muted;
+        cursor: pointer;
+
+        &.hover {
+            text-decoration: none;
+        }
+
+        &.active {
+            font-weight: bold;
+        }
+    }
 }
 
 .search-container {
