--- a/schwifty/templates/angular/entity.html
+++ b/schwifty/templates/angular/entity.html
@@ -8,18 +8,13 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8" ng-show="data.$schema">
-      <table class="table table-condensed">
-        <tr ng-repeat="row in data.rows | orderBy: 'header'">
-          <th>{{row.header}}</th>
-          <td>{{row.value}}</td>
-        </tr>
-      </table>
+    <div class="col-md-8">
+      <pre>{{jsontext}}</pre>
     </div>
     <div class="col-md-4">
       <p class="help-block">
-          This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
-          and was last updated: {{data.indexed_at | date}}.
+        This record is from <a ng-href="{{source.url}}">{{source.title}}</a>,
+        and was last updated: {{data.indexed_at | date}}.
       </p>
     </div>
   </div>
