--- a/schwifty/templates/angular/search.html
+++ b/schwifty/templates/angular/search.html
@@ -5,10 +5,10 @@
         <div class="pull-right sorting" ng-show="results.total">
           Sort by
           <a ng-click="query.set('sort', 'score')"
-            ng-class="{'active': query.get().sort == 'score'}">relevance</a>
+            ng-class="{'active': query.state.sort == 'score'}">relevance</a>
           &middot;
           <a ng-click="query.set('sort', 'linkcount')"
-            ng-class="{'active': query.get().sort == 'linkcount'}">relationships</a>
+            ng-class="{'active': query.state.sort == 'linkcount'}">relationships</a>
         </div>
         <span ng-show="results.total">
           Showing {{ results.offset+1  | number }} to {{ results.offset + results.limit  | number }}
@@ -18,7 +18,7 @@
           No results match your search terms. Please try a wider query.
         </span>
       </div>
-      <ol class="result-list">
+      <ol class="result-list" infinite-scroll="loadNext()" infinite-scroll-distance="2" infinite-scroll-disabled="loading">
         <li ng-repeat="result in results.results"
           class="result">
 
