Begin implementing a binding mechanism for JSON schema.

--- a/schwifty/templates/index.html
+++ b/schwifty/templates/index.html
@@ -77,6 +77,7 @@
       "js/app.js",
       "js/services/metadata.js",
       "js/services/query.js",
+      "js/services/binding.js",
       "js/directives/entity_icon.js",
       "js/directives/search_facet.js",
       "js/controllers/home.js",
