Rename schwifty -> spindle

--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="schwifty">
+<html ng-app="spindle">
 <head>
   <meta charset="utf-8">
   <title>{{config.APP_NAME}}</title>
