Basic entity view / browser with recursive directive.

--- a/spindle/static/style.scss
+++ b/spindle/static/style.scss
@@ -166,8 +166,8 @@ body, html {
 
     .table {
         th {
-            max-width: 40%;
-            width: 40%;
+            // max-width: 20%;
+            width: 20%;
         }
         th, td {
             // border-top: 1px solid $list-group-border;
