Render handler for values.

--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -82,6 +82,7 @@
       "js/services/query.js",
       "js/services/schema.js",
       "js/directives/entity_icon.js",
+      "js/directives/bind_value.js",
       "js/directives/entity_bind.js",
       "js/directives/search_facet.js",
       "js/controllers/home.js",
