Force HTTPS upon deployment.

--- a/spindle/templates/angular/entity.html
+++ b/spindle/templates/angular/entity.html
@@ -90,8 +90,8 @@
         </entity-table-column>
       </entity-table>
 
-      <entity-table bind="bind" collection="lands"
-        title="Asset ownership">
+      <entity-table bind="bind" collection="assets"
+        title="Asset ownership, land and buildings">
         <entity-table-column path="" title="Name">
         </entity-table-column>
         <entity-table-column path="jurisdiction_code" title="Jurisdiction">
