More verbose title.

--- a/spindle/templates/angular/entity.html
+++ b/spindle/templates/angular/entity.html
@@ -103,7 +103,7 @@
       </entity-table>
 
       <entity-table bind="bind" collection="owners"
-        title="Owners">
+        title="Owners of the asset">
         <entity-table-column path="" title="Name">
         </entity-table-column>
         <entity-table-column path="jurisdiction_code" title="Jurisdiction">
