--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -48,7 +48,7 @@
       <div class="spinner" ng-hide="routeFailed">
         <i class="fa fa-spinner fa-pulse"></i>
       </div>
-      <div class="spinner failed" ng-show="routeFailed">
+      <div class="spinner failed" ng-cloak ng-show="routeFailed">
         <i class="fa fa-exclamation-triangle"></i>
         <div class="failure-note">
           He's dead, Jim.
