Bug fix parent-child relations.

--- a/spindle/templates/angular/entity.html
+++ b/spindle/templates/angular/entity.html
@@ -68,9 +68,9 @@
 
       <entity-table bind="bind" collection="parents"
         title="Parent companies">
-        <entity-table-column path="organization" title="Name">
+        <entity-table-column path="" title="Name">
         </entity-table-column>
-        <entity-table-column path="organization.jurisdiction_code" title="Jurisdiction">
+        <entity-table-column path="jurisdiction_code" title="Jurisdiction">
         </entity-table-column>
         <entity-table-column path="founding_date" title="Founding">
         </entity-table-column>
@@ -80,9 +80,9 @@
 
       <entity-table bind="bind" collection="children"
         title="Subsidiary companies">
-        <entity-table-column path="organization" title="Name">
+        <entity-table-column path="" title="Name">
         </entity-table-column>
-        <entity-table-column path="organization.jurisdiction_code" title="Jurisdiction">
+        <entity-table-column path="jurisdiction_code" title="Jurisdiction">
         </entity-table-column>
         <entity-table-column path="founding_date" title="Founding">
         </entity-table-column>
