--- a/spindle/templates/angular/entity_icon.html
+++ b/spindle/templates/angular/entity_icon.html
@@ -1,3 +1,1 @@
-<span class="entity-icon">
-  <i class="fa {{icon}}"></i>
-</span>
+<span class="entity-icon"><i class="fa" ng-class="icon"></i></span>
