--- a/spindle/templates/angular/entity_table.html
+++ b/spindle/templates/angular/entity_table.html
@@ -1,12 +1,12 @@
 <div ng-if="bind.has(collection)">
   <table class="table table-striped table-entity-collection">
     <tr>
-      <th colspan="{{columns.length}}">{{title}}</th>
+      <th colspan="{{columns}}">{{title}}</th>
     </tr>
     <tr ng-transclude>
     </tr>
-    <tr ng-repeat="row in rows">
-      <td ng-repeat="cell in getColumnBinds(row) track by $index"
+    <tr ng-repeat="row in rows track by row.serial">
+      <td ng-repeat="cell in row track by cell.serial"
         ng-class="{'object': cell.model.isObject}">
         <span ng-if="cell.model.isValue">
           <bind-value bind="cell" />
@@ -15,7 +15,7 @@
           <entity-icon schema="cell.schema.id"></entity-icon>
           <bind-value bind="cell.p.name" link="cell.data.id" />
         </span>
-        <span ng-if="!cell" class="empty-value">
+        <span ng-if="!cell.data" class="empty-value">
           &mdash;
         </span>
       </td>
